k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compositor-backend
  namespace: tenant-grupo4-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compositor-backend
  template:
    metadata:
      labels:
        app: compositor-backend
    spec:
      containers:
        - name: compositor-backend
          image: registry.deti/grupo4-egs-deti.ua.pt/compositor-backend:v1
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: compositor-data
              mountPath: /app/data
          readinessProbe:
            httpGet:
              path: /api/health/live
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            failureThreshold: 5
      volumes:
        - name: compositor-data
          persistentVolumeClaim:
            claimName: compositor-data

---
apiVersion: v1
kind: Service
metadata:
  name: compositor-backend
  namespace: tenant-grupo4-egs-deti-ua-pt
spec:
  selector:
    app: compositor-backend
  ports:
    - port: 8080
      targetPort: 8080
