k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compositor-frontend
  namespace: tenant-grupo4-egs-deti-ua-pt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: compositor-frontend
  template:
    metadata:
      labels:
        app: compositor-frontend
    spec:
      containers:
        - name: compositor-frontend
          image: registry.deti/grupo4-egs-deti.ua.pt/compositor-frontend:v1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3

---
apiVersion: v1
kind: Service
metadata:
  name: compositor-frontend
  namespace: tenant-grupo4-egs-deti-ua-pt
spec:
  selector:
    app: compositor-frontend
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voltguard-ingress
  namespace: tenant-grupo4-egs-deti-ua-pt
spec:
  rules:
    - host: grupo4-egs-deti.ua.pt
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: compositor-frontend
                port:
                  number: 80
